--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "php": "^8.0",
+        "laravel/framework": "^10.0",
+        "laravel/tinker": "^2.9",
+        "beyondcode/laravel-websockets": "^2.0.0-beta.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
-        "laravel/pail": "^1.1",
+
         "laravel/pint": "^1.13",
-        "laravel/sail": "^1.26",
+
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^11.0.1"
@@ -66,6 +67,9 @@
             "php-http/discovery": true
         }
     },
+
+
     "minimum-stability": "stable",
     "prefer-stable": true
+
 }
